@@ -17,6 +17,7 @@ S3method(print,sj_resample)
 S3method(print,sj_splithalf)
 S3method(print,sj_xtab_stat)
 S3method(print,sjstats_outliers)
+S3method(print,sjstats_pred_accuracy)
 S3method(print,sjstats_r2)
 S3method(print,sjstats_zcf)
 S3method(print,svyglm.nb)
@@ -135,7 +136,6 @@ importFrom(sjmisc,is_num_fac)
 importFrom(sjmisc,recode_to)
 importFrom(sjmisc,std)
 importFrom(sjmisc,str_contains)
-importFrom(sjmisc,var_rename)
 importFrom(stats,anova)
 importFrom(stats,aov)
 importFrom(stats,as.formula)
