@@ -3,7 +3,7 @@
 #' @name efc
 #' @keywords data
 #'
-#' @description A SPSS sample data set, imported with the \code{\link[sjmisc]{read_spss}} function.
+#' @description A SPSS sample data set, imported with the \code{\link[sjlabelled]{read_spss}} function.
 #'
 #' @examples
 #' # Attach EFC-data
