@@ -5,7 +5,7 @@
 \alias{efc}
 \title{Sample dataset from the EUROFAMCARE project}
 \description{
-A SPSS sample data set, imported with the \code{\link[sjmisc]{read_spss}} function.
+A SPSS sample data set, imported with the \code{\link[sjlabelled]{read_spss}} function.
 }
 \examples{
 # Attach EFC-data
